[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apruvly"
version = "0.1.0"
description = "Official Python client for the Apruvly approval workflow API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "APRUVLY" },
]
keywords = [
    "apruvly",
    "approvals",
    "workflow",
    "api",
    "client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://apruvly.io"
Repository = "https://github.com/apruvly/apruvly-python"
Documentation = "https://apruvly.io/documentation"
API = "https://api.apruvly.io"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/docs/openapi.json",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
packages = ["apruvly"]
strict = true
warn_return_any = false
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
